--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,13 @@
 [project]
 name = "pixi-manga-manager"
-version = "0.1.0-alpha1"
+version = "0.1.0a1"
 description = "Flexible manga library organizer, metadata scraper, and renamer"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
-license.text = "AGPL-3.0-or-later"
-license.file = ["LICENSE"]
-authors = [
-    {name = "Anton Castelli", email = "anton.c42@gmail.com"},
-]
+dependencies = ["toga"]
+license = "AGPL-3.0-or-later"
+license-files = ["LICENSE"]
+authors = [{ name = "Anton Castelli", email = "anton.c42@gmail.com" }]
 maintainers = []
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
@@ -28,14 +26,7 @@ Issues = "https://github.com/antonc42/pixi-manga-manager/issues"
 #Changelog = ""
 
 [dependency-groups]
-dev = [
-    "pylint",
-    "black",
-    "isort",
-    "rust-just",
-    "mypy",
-    "briefcase",
-]
+dev = ["pylint", "black", "isort", "rust-just", "mypy", "briefcase"]
 
 # This project was generated with 0.3.22 using template: https://github.com/beeware/briefcase-template@v0.3.22
 
@@ -48,30 +39,18 @@ formal_name = "Pixi Manga Manager"
 description = "Flexible manga library organizer, metadata scraper, and renamer"
 long_description = """More details about the app should go here.
 """
-sources = [
-    "src/pixi_manga_manager",
-]
-test_sources = [
-    "tests",
-]
+sources = ["src/pixi_manga_manager"]
+test_sources = ["tests"]
 
-requires = [
-]
-test_requires = [
-    "pytest",
-]
+requires = []
+test_requires = ["pytest"]
 
 [tool.briefcase.app.pixi-manga-manager.macOS]
 universal_build = true
-requires = [
-    "toga-cocoa~=0.4.7",
-    "std-nslog~=1.0.3",
-]
+requires = ["toga-cocoa~=0.4.7", "std-nslog~=1.0.3"]
 
 [tool.briefcase.app.pixi-manga-manager.linux]
-requires = [
-    "toga-gtk~=0.4.7",
-]
+requires = ["toga-gtk~=0.4.7"]
 
 [tool.briefcase.app.pixi-manga-manager.linux.system.debian]
 system_requires = [
@@ -123,7 +102,8 @@ system_runtime_requires = [
     # Needed to provide GTK
     "gtk3",
     # Needed to support Python bindings to GTK
-    "gobject-introspection", "typelib(Gtk) = 3.0",
+    "gobject-introspection",
+    "typelib(Gtk) = 3.0",
     # Dependencies that GTK looks for at runtime
     "libcanberra-gtk3-module",
     # Needed to provide WebKit2 at runtime
@@ -174,9 +154,7 @@ system_requires = [
     "gvfs-client",
 ]
 
-linuxdeploy_plugins = [
-    "DEPLOY_GTK_VERSION=3 gtk",
-]
+linuxdeploy_plugins = ["DEPLOY_GTK_VERSION=3 gtk"]
 
 [tool.briefcase.app.pixi-manga-manager.linux.flatpak]
 flatpak_runtime = "org.gnome.Platform"
@@ -184,21 +162,14 @@ flatpak_runtime_version = "47"
 flatpak_sdk = "org.gnome.Sdk"
 
 [tool.briefcase.app.pixi-manga-manager.windows]
-requires = [
-    "toga-winforms~=0.4.7",
-]
+requires = ["toga-winforms~=0.4.7"]
 
 # Mobile deployments
 [tool.briefcase.app.pixi-manga-manager.iOS]
-requires = [
-    "toga-iOS~=0.4.7",
-    "std-nslog~=1.0.3",
-]
+requires = ["toga-iOS~=0.4.7", "std-nslog~=1.0.3"]
 
 [tool.briefcase.app.pixi-manga-manager.android]
-requires = [
-    "toga-android~=0.4.7",
-]
+requires = ["toga-android~=0.4.7"]
 
 base_theme = "Theme.MaterialComponents.Light.DarkActionBar"
 
@@ -212,7 +183,5 @@ build_gradle_dependencies = [
 
 # Web deployments
 [tool.briefcase.app.pixi-manga-manager.web]
-requires = [
-    "toga-web~=0.4.7",
-]
+requires = ["toga-web~=0.4.7"]
 style_framework = "Shoelace v2.3"
